@@ -55,6 +55,9 @@ earlier releases.
 
   * [all]: Fold some near-duplicate strings
 
+  * [curses]: Update package views after 'Cancel pending actions'
+              (Closes: #595753)
+
 - Documentation:
 
   * [doc]: Add doctype headers to html docs.
